gke/common.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: development
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: sportapp-ingress
  namespace: development
  annotations:
    kubernetes.io/ingress.global-static-ip-name: ingress-public-ip
spec:
  rules:
    - http:
        paths:
          - path: /web/*
            pathType: ImplementationSpecific
            backend:
              service:
                name: sportapp-web-service
                port:
                  number: 80
          - path: /usuario/*
            pathType: ImplementationSpecific
            backend:
              service:
                name: sportapp-ms-usuario-service
                port:
                  number: 80
          - path: /autenticador/*
            pathType: ImplementationSpecific
            backend:
              service:
                name: sportapp-ms-autenticador-service
                port:
                  number: 80
          - path: /perfil-deportivo/*
            pathType: ImplementationSpecific
            backend:
              service:
                name: service-ms-perfil-deportivo
                port:
                  number: 80
          - path: /molestias/*
            pathType: ImplementationSpecific
            backend:
              service:
                name: service-ms-catalogo
                port:
                  number: 80
          - path: /lesiones/*
            pathType: ImplementationSpecific
            backend:
              service:
                name: service-ms-catalogo
                port:
                  number: 80
          - path: /deportes/*
            pathType: ImplementationSpecific
            backend:
              service:
                name: service-ms-catalogo
                port:
                  number: 80
          - path: /planes-entrenamiento/*
            pathType: ImplementationSpecific
            backend:
              service:
                name: service-ms-planes-entrenamiento
                port:
                  number: 80
          - path: /suscripciones/*
            pathType: ImplementationSpecific
            backend:
              service:
                name: service-ms-catalogo
                port:
                  number: 80
          - path: /niveles-plan/*
            pathType: ImplementationSpecific
            backend:
              service:
                name: service-ms-catalogo
                port:
                  number: 80
          - path: /alimentos/*
            pathType: ImplementationSpecific
            backend:
              service:
                name: service-ms-catalogo
                port:
                  number: 80
          - path: /tipos-dietas/*
            pathType: ImplementationSpecific
            backend:
              service:
                name: service-ms-catalogo
                port:
                  number: 80
          - path: /perfil-alimenticio/*
            pathType: ImplementationSpecific
            backend:
              service:
                name: service-ms-perfil-alimenticio
                port:
                  number: 80
          - path: /categorias-socio/*
            pathType: ImplementationSpecific
            backend:
              service:
                name: service-ms-catalogo
                port:
                  number: 80
          - path: /socios-negocio/*
            pathType: ImplementationSpecific
            backend:
              service:
                name: sportapp-ms-usuario-service
                port:
                  number: 80
          - path: /tipos-documentos/*
            pathType: ImplementationSpecific
            backend:
              service:
                name: service-ms-catalogo
                port:
                  number: 80
